<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="20dp"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nha_konsulta"
        android:textSize="50sp"
        />

    <TextView
        android:id="@+id/tvTittleHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/bem_vindo"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_person"
        />

    <TextView
        android:id="@+id/tvNomeHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnMarcar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marcar_consulta"
        android:layout_marginTop="100dp"
        />

    <Button
        android:id="@+id/btnVerConsultas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_consultas"
        android:layout_marginTop="15dp"
        />

</LinearLayout>