<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"

    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_marginTop="50dp"
        android:layout_width="411dp"
        android:layout_height="731dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/im_logo"
            android:layout_marginHorizontal="150dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/baseline_person"
            android:contentDescription=""/>

        <TextView
            android:id="@+id/tvTittleLogin"
            android:layout_marginTop="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="30sp"/>


        <EditText
            android:id="@+id/etvEmail"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etvPassword"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="50dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Não tem uma conta?"/>

            <Button
                android:id="@+id/btnRegistar"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registar"
                android:textColor="@color/black"
                android:padding="0dp"
                />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>